# acoustic

./: .gitignore  acoustic.md
src/acoustic_bridge/: package.xml  setup.cfg  setup.py
src/acoustic_bridge/acoustic_bridge/: acoustic_bridge_node.py
src/acoustic_bridge/config/: acoustic_bridge.yaml
src/acoustic_bridge/launch/: acoustic_bridge.launch.py
src/acoustic_bridge_msgs/: CMakeLists.txt  package.xml
src/acoustic_bridge_msgs/msg/: AcousticDetection.msg  AcousticHeartbeat.msg
src/acoustic_comm/: .gitignore  README.md  environment.yml  setup.py
src/acoustic_comm/configs/: default.yaml
src/acoustic_comm/markdown/: acoustic.md  acoustic_coding_communication.md  acoustic_comm_improved.md  acoustic_success.md  explanation.md  fast.md  frequency.md  parameter_tuning.md  realtime_listener_output.md
src/acoustic_comm/scripts/: release_spear.sh
src/acoustic_comm/scripts/demo_compat/: 01_make_beep.py  02_fsk_tx.py  03_fsk_rx.py  04_noise_eval.py  05_sync_rx.py  06_rx_chirp_crc_vote.py  06_tx_chirp_crc_repeat.py  07_eval_chirp_crc_vote_noise.py  08_eval_pink_reverb.py  13_A_mic_test.py  (+8 more)
src/acoustic_comm/tests/: test_crc.py  test_frame_roundtrip.py  test_fsk_basic.py
src/acoustic_comm/tools/: analyze_fast_recording.py  check_chirp_direction.py  gen_fast_carrier_sweep.py  record_wav.py
src/serial_driver_ros2/: .gitignore  CMakeLists.txt  README.md  package.xml
src/serial_driver_ros2/.history copy/include/serial_driver/: protocol_defs_20251115174853.hpp  protocol_defs_20251122043006.hpp
src/serial_driver_ros2/.vscode copy/: settings.json
src/serial_driver_ros2/config/: serial_config.yaml
src/serial_driver_ros2/include/serial_driver/: protocol_defs.hpp  serial_comm.hpp
src/serial_driver_ros2/launch/: serial_driver.launch.py
src/serial_driver_ros2/script/: send_demo.py
src/serial_driver_ros2/src/: serial_driver.cpp  serial_main.cpp
(+22 files in other folders)
